--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-    "name": "crawler-node",
-    "version": "1.0.0",
-    "description": "爬虫节点",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/nick121212/crawler-node.git"
-    },
-    "author": "NICK",
-    "license": "MIT",
-    "devDependencies": {
-        "babel-core": "^6.0.20",
-        "babel-eslint": "^6.1.2",
-        "babel-plugin-source-map-support": "0.0.1",
-        "babel-plugin-syntax-async-functions": "^6.8.0",
-        "babel-plugin-transform-async-to-generator": "^6.8.0",
-        "babel-plugin-transform-runtime": "^6.12.0",
-        "babel-polyfill": "^6.0.16",
-        "babel-preset-es2015": "^6.13.1",
-        "babel-preset-es2015-node5": "^1.1.2",
-        "babel-preset-stage-0": "^6.5.0",
-        "babel-preset-stage-3": "^6.17.0",
-        "babel-register": "^6.4.3",
-        "babel-runtime": "^6.11.6",
-        "eslint": "^3.11.1",
-        "eslint-plugin-promise": "^3.4.0",
-        "eventsource-polyfill": "^0.9.6",
-        "source-map-support": "^0.4.6"
-    },
-    "dependencies": {
-        "boom": "^4.2.0",
-        "composition": "^2.3.0",
-        "connect": "^3.5.0",
-        "eureca.io": "^0.6.42",
-        "koa-compose": "^3.2.1",
-        "socket.io": "^1.7.1",
-        "sockjs": "^0.3.18",
-        "sockjs-client": "^1.1.1"
-    }
+  "name": "crawler-node",
+  "version": "1.0.0",
+  "description": "爬虫节点",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nick121212/crawler-node.git"
+  },
+  "author": "NICK",
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.0.20",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-source-map-support": "0.0.1",
+    "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-polyfill": "^6.0.16",
+    "babel-preset-es2015": "^6.13.1",
+    "babel-preset-es2015-node5": "^1.1.2",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.4.3",
+    "babel-runtime": "^6.11.6",
+    "eslint": "^3.11.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eventsource-polyfill": "^0.9.6",
+    "source-map-support": "^0.4.6"
+  },
+  "dependencies": {
+    "boom": "^4.2.0",
+    "composition": "^2.3.0",
+    "connect": "^3.5.0",
+    "crawler-ai-analysis": "^1.0.1",
+    "crawler-downloader": "^1.0.1",
+    "crawler-downloader-analysis": "^1.0.1",
+    "crawler-html-analysis": "^1.0.1",
+    "crawler-result-store": "^1.0.1",
+    "crawler-url-analysis": "^1.0.1",
+    "eureca.io": "^0.6.42",
+    "koa-compose": "^3.2.1",
+    "socket.io": "^1.7.1",
+    "sockjs": "^0.3.18",
+    "sockjs-client": "^1.1.1"
+  }
 }
